---
title: Opengraph library
---
classDiagram
    class Config {
        + strict: bool
    }

    class OpengraphParserInterface {
        <<interface>>
        + constructor(config Config)
        + parse(content string) AbstractObject
    }

    OpengraphParserInterface -- Config
    OpengraphParserInterface -- WebsiteObject

    class OpengraphParser
    OpengraphParserInterface <|.. OpengraphParser : implements

    note "title,type,url,at least one are required"
    class AbstractObject {
        + title: string
        + type: Type
        + url: Url
        + images: List<Image>
        + description: string
        + locale: Locale
        + siteName: string
        + determiner: Determiner
    }

    class WebsiteObject

    AbstractObject <|-- WebsiteObject
    AbstractObject *-- Type
    AbstractObject *-- Url
    AbstractObject *-- Image
    AbstractObject *-- Locale
    AbstractObject *-- Determiner



    class Locale {
        + value: string
        + alternates: List<string>
    }

    class Determiner {
        <<enumeration>>
        A
        An
        The
        Auto
        Default
    }

    class Type {
        <<enumeration>>
        Website
    }

    class Image {
        + Url url
        + Url secureUrl
        + string type (mimetype)
        + int width
        + int height
        + string alt
    }

    class Url {
        + value: string
    }


%%private(set) public Title $title;
%%private(set) public Description $description;
%%private(set) public Type $type;
%%
%%/**
%%* @var Image[]
%%*/
%%private(set) public array $images;
%%private(set) public Url $url;
